--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script
+      src="https://kit.fontawesome.com/81c79a5c32.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Billing Page Test</title>
   </head>
   <body>
