--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     <title>Billing Page Test</title>
   </head>
   <body>
@@ -22,33 +22,63 @@
             </div>
             <ul>
               <li>
-                <a class="active" href="#email"
-                  ><i class="fa fa-fw fa-home"></i> General</a
+                <a href="#x"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175503866-9051b147-e1a3-4c54-ba4a-62cb2c1caae2.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">General</div></a
                 >
               </li>
               <li>
-                <a href="#email"
-                  ><i class="fa fa-fw fa fa fa-paper-plane"></i> Password</a
+                <a href="#x"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175502372-59822c36-346e-42a3-b069-e78db66aea1f.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">Password</div></a
                 >
               </li>
               <li>
-                <a href="#email"
-                  ><i class="fa fa-fw fa fa-shopping-cart"></i> Invitations</a
+                <a href="#x"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175502447-bb2b7ef5-0c83-4581-889b-7f77b121306c.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">Invitations</div></a
                 >
               </li>
               <li>
-                <a href="#email"
-                  ><i class="fa fa-fw fa fas fa-user-plus"></i> Billing</a
+                <a href="#x"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175502578-a1a7158e-7139-48ac-ad85-9873a93501c9.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">Billing</div></a
                 >
               </li>
               <li>
-                <a href="#email"
-                  ><i class="fa fa-fw fa fas fa-user-plus"></i> Apps</a
+                <a href="#x"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175502489-6b13c0be-cf73-4dac-a30e-76f63fe486f7.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">Apps</div></a
                 >
               </li>
               <li>
-                <a href="#email" class="bottom-link"
-                  ><i class="fa fa-fw fa fas fa-user-plus"></i> Log out</a
+                <a href="#x" class="bottom-link"
+                  ><img
+                    src="https://user-images.githubusercontent.com/67100199/175499716-d9582c1d-9925-4e28-baab-b15b245c7244.png"
+                    alt="Profile Pic"
+                    class="list-icon"
+                  />
+                  <div class="list-name">Log out</div></a
                 >
               </li>
             </ul>
